EITI-140: Fix nested contextual links visibility.

--- a/public_html/sites/all/themes/eiti/styles/drupal/contextual.css.less
+++ b/public_html/sites/all/themes/eiti/styles/drupal/contextual.css.less
@@ -30,6 +30,10 @@ div.contextual-links-wrapper {
     right: -2em;
     top: 1em;
   }
+
+  .contextual-links-region .contextual-links-region & {
+    top: 2em;
+  }
 }
 html.js div.contextual-links-wrapper {
   display: block;
